# opus-rs

./: Cargo.toml
opus-sys/: Cargo.toml  build.rs
opus-sys/src/: lib.rs
src/: lib.rs
tests/: fec.rs  tests.rs
