[package]
name = "opus"
version = "0.3.1"
authors = [
	"Varphone Wong <varphone@qq.com",
	"Tad Hardesty <tad@platymuus.com>"
]

description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]
categories = ["api-bindings", "encoding", "compression",
	"multimedia::audio", "multimedia::encoding"]

repository = "https://github.com/vaxpl/opus-rs"
documentation = "https://docs.rs/opus"

[dependencies]
opus-sys = { path = "opus-sys" }
libc = "0.2"
